# jichang

./: .gitignore  AGENTS.md  README.md  configdns.yaml  main.py  pyproject.toml  requirements.txt  run.sh  update_rules.py  validate_config.py
api/: main.py
configs/: config.yaml  dns-allv2.yaml  dns.yaml  goex.yaml  goexdns.yaml  goexdns2.yaml  nikki-core-goexdns2.yaml  nikki-goex.yaml  test.yaml  whitelist.yaml  whitelist2.yaml  whitelist3.yaml  whitelist4.yaml
openwrt/: sub-router-core.md  sub-router-core.sh
rule-providers/: dmm.list  domestic.list  javdb.list  netflix.list  openai.list  proxy.list  telegram.list  tiktok.list  twitter.list  youtubeapp.list
rules/: dmm.list
script/: update_mihomo_kernel.sh  update_mihomo_ui.sh
static/: app.js  index.html  style.css
webui/: config.py  main.py
webui/models/: __init__.py  rule.py  yaml_config.py
webui/routes/: __init__.py  api.py  config.py  configs.py  dashboard.py  rules.py
webui/services/: __init__.py  rule_service.py  yaml_service.py
webui/static/css/: styles.css
webui/templates/: __init__.py  base.html  dashboard.html
webui/templates/components/: modal.html  nav.html
webui/templates/config/: dns.html  index.html  providers.html  proxy_groups.html  rules.html  sniffer.html  tun.html
webui/templates/rules/: editor.html  index.html
