[project]
name = "jichang-webui"
version = "0.1.0"
description = "WebUI for Clash Config Manager"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.42.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["webui*"]
exclude = ["rules*"]
